5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1838_1277.log
== TEST (2019-06-23 21:27:40) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= int(input("Digite cidade1: "))
c2= int(input("Digite cidade 2: "))
i = c1 // 111 - 1
j = c2 // 111 - 1
x = tabela[i][j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    i = c1 // 111 - 1
NameError: name 'c1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 21:27:55) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= int(input("Digite cidade1: "))
c2= int(input("Digite cidade 2: "))
i = c // 111 - 1
j = c2 // 111 - 1
x = tabela[i][j]
print(x)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 21:28:04) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= int(input("Digite cidade1: "))
c2= int(input("Digite cidade 2: "))
i = c // 111 - 1
j = c2 // 111 - 1
x = tabela[i][j]
print(x)
-- EXECUTION TIME:
0.861448
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:56:32) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= int(input("Digite cidade1: "))
c2= int(input("Digite cidade 2: "))

-- EXECUTION TIME:
0.764392
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:

-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:

-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:57:24) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= int(input("Digite cidade1: "))
c2= int(input("Digite cidade 2: "))

-- EXECUTION TIME:
0.911217
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:

-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:

-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 15:46:23) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

print(c[0])
print(c2[0])
-- EXECUTION TIME:
0.758367
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
7
6
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
5
1
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
3
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:46:23) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

print(c[0])
print(c2[0])
-- OUTPUT:
7
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:49:26) 
-- CODE:
tabela= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(m[v1][v2])
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:49:49) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:50:00) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:50:11) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 15:51:19) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- EXECUTION TIME:
0.725155
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 22:33:12) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
